--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,12 +26,15 @@
     "@ng-bootstrap/ng-bootstrap": "4.1.0",
     "ajv": "6.10.0",
     "ajv-keywords": "3.4.0",
+    "bcrypt": "^3.0.6",
     "bootstrap": "4.0.0",
     "copy-webpack-plugin": "5.0.1",
     "core-js": "2.6.5",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
+    "jsonwebtoken": "^8.5.1",
     "jw-bootstrap-switch-ng2": "2.0.5",
+    "moment": "^2.24.0",
     "ng2-nouislider": "1.7.13",
     "nouislider": "9.2.0",
     "popper.js": "1.14.7",
