--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "nodemon": "^1.19.1",
+    "request": "^2.88.0",
     "socket.io": "^2.2.0"
   }
 }
