--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,11 +27,11 @@
     "ajv": "6.10.0",
     "ajv-keywords": "3.4.0",
     "bcrypt": "^3.0.6",
-    "bootstrap": "4.0.0",
+    "bootstrap": "^4.3.1",
     "copy-webpack-plugin": "5.0.1",
     "core-js": "2.6.5",
     "font-awesome": "4.7.0",
-    "jquery": "3.3.1",
+    "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.24.0",
