--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,9 @@
     "jsonwebtoken": "^8.5.1",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.24.0",
+    "ng-starrating": "^1.0.7",
     "ng2-nouislider": "1.7.13",
+    "ngx-bar-rating": "^1.1.0",
     "nouislider": "9.2.0",
     "popper.js": "1.14.7",
     "rellax": "1.4.0",
