--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "7.2.9",
     "@angular/router": "7.2.9",
     "@ng-bootstrap/ng-bootstrap": "4.1.0",
+    "@swimlane/ngx-charts": "^12.0.1",
     "ajv": "6.10.0",
     "ajv-keywords": "3.4.0",
     "bcrypt": "^3.0.6",
