--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,19 +27,20 @@
     "ajv": "6.10.0",
     "ajv-keywords": "3.4.0",
     "bcrypt": "^3.0.6",
-    "bootstrap": "4.0.0",
+    "bootstrap": "^4.3.1",
     "copy-webpack-plugin": "5.0.1",
     "core-js": "2.6.5",
     "font-awesome": "4.7.0",
-    "jquery": "3.3.1",
+    "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "jw-bootstrap-switch-ng2": "2.0.5",
+    "kind": "^0.1.0",
     "moment": "^2.24.0",
     "ng2-nouislider": "1.7.13",
     "nouislider": "9.2.0",
     "popper.js": "1.14.7",
     "rellax": "1.4.0",
-    "rxjs": "^6.4.0",
+    "rxjs": "^6.5.2",
     "rxjs-compat": "6.4.0",
     "tslib": "1.9.3",
     "zone.js": "0.8.29"
