--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,12 +30,14 @@
     "bootstrap": "^4.3.1",
     "copy-webpack-plugin": "5.0.1",
     "core-js": "2.6.5",
+    "file-saver": "^2.0.2",
     "font-awesome": "4.7.0",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "kind": "^0.1.0",
     "moment": "^2.24.0",
+    "ng2-file-upload": "^1.3.0",
     "ng2-nouislider": "1.7.13",
     "nouislider": "9.2.0",
     "popper.js": "1.14.7",
