--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.5.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.3.0",
     "nodemon": "^1.19.1",
     "socket.io": "^2.2.0"
   }
