--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.24.0",
     "ng2-nouislider": "1.7.13",
     "nouislider": "9.2.0",
+    "paypal-rest-sdk": "^1.8.1",
     "popper.js": "1.14.7",
     "rellax": "1.4.0",
     "rxjs": "^6.4.0",
