--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
     "nodemon": "^1.19.1",
+    "paypal-rest-sdk": "^1.8.1",
     "socket.io": "^2.2.0"
   }
 }
