--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.3.0",
     "nodemon": "^1.19.1",
     "paypal-rest-sdk": "^1.8.1",
+    "request": "^2.88.0",
     "socket.io": "^2.2.0"
   }
 }
