--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "7.2.9",
     "@angular/forms": "7.2.9",
     "@angular/http": "7.2.9",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "7.2.9",
     "@angular/platform-browser-dynamic": "7.2.9",
     "@angular/platform-server": "7.2.9",
