--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.3.1",
+    "nodemailer-mailgun-transport": "^1.4.0",
     "nodemon": "^1.19.1",
     "paypal-rest-sdk": "^1.8.1",
     "request": "^2.88.0",
